esc_classification/build/log/idf_py_stdout_output_25628
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\Project\esc-classifier\esc_classification\build\bootloader\esp-idf\esptool_py && D:\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 E:/Project/esc-classifier/esc_classification/build/bootloader/bootloader.bin"
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/7] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache D:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/Project/esc-classifier/esc_classification/build/config -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32s3 -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -IE:/Project/esc-classifier/esc_classification/components/esp-sr/esp-tts/esp_tts_chinese/include -IE:/Project/esc-classifier/esc_classification/components/esp-sr/include/esp32s3 -IE:/Project/esc-classifier/esc_classification/components/esp-sr/src/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/json/cJSON -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/spiffs/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_partition/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/driver/touch_sensor/esp32s3/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_gpio/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_spi/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_ana_cmpr/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_i2s/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdspi/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdio/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_dac/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_rmt/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_tsens/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_sdm/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_i2c/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_uart/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/vfs/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_ledc/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_parlio/include -ID:/Espressif/frameworks/esp-idf-v5.3.1/components/esp_driver_usb_serial_jtag/include -IE:/Project/esc-classifier/esc_classification/components/mic_control/include -IE:/Project/esc-classifier/esc_classification/components/esp-tflite-micro -IE:/Project/esc-classifier/esc_classification/components/esp-tflite-micro/third_party/gemmlowp -IE:/Project/esc-classifier/esc_classification/components/esp-tflite-micro/third_party/flatbuffers/include -IE:/Project/esc-classifier/esc_classification/components/esp-tflite-micro/third_party/ruy -IE:/Project/esc-classifier/esc_classification/components/esp-tflite-micro/third_party/kissfft -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=E:/Project/esc-classifier/esc_classification=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -DTF_LITE_STATIC_MEMORY -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c E:/Project/esc-classifier/esc_classification/main/main.cpp
E:/Project/esc-classifier/esc_classification/main/main.cpp:161:12: warning: missing terminating " character
  161 |     printf("MFCC stats - Min: %.4f, Max: %.4f, Mean: %.4f
      |            ^
E:/Project/esc-classifier/esc_classification/main/main.cpp:161:12: error: missing terminating " character
  161 |     printf("MFCC stats - Min: %.4f, Max: %.4f, Mean: %.4f
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/Project/esc-classifier/esc_classification/main/main.cpp:162:1: warning: missing terminating " character
  162 | ", mfcc_min, mfcc_max, mfcc_mean);
      | ^
E:/Project/esc-classifier/esc_classification/main/main.cpp:162:1: error: missing terminating " character
  162 | ", mfcc_min, mfcc_max, mfcc_mean);
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
E:/Project/esc-classifier/esc_classification/main/main.cpp: In function 'const char* classify_mfcc(const float*)':
E:/Project/esc-classifier/esc_classification/main/main.cpp:164:5: error: expected primary-expression before 'for'
  164 |     for (int i = 0; i < MODEL_INPUT_SIZE; i++) {
      |     ^~~
E:/Project/esc-classifier/esc_classification/main/main.cpp:164:21: error: 'i' was not declared in this scope
  164 |     for (int i = 0; i < MODEL_INPUT_SIZE; i++) {
      |                     ^
E:/Project/esc-classifier/esc_classification/main/main.cpp:160:11: warning: unused variable 'mfcc_mean' [-Wunused-variable]
  160 |     float mfcc_mean = mfcc_sum / MODEL_INPUT_SIZE;
      |           ^~~~~~~~~
ninja: build stopped: subcommand failed.
